@@ -330,4 +330,8 @@
 - <diagonalMatrix> o <ddenseMatrix> now returns diagonalMatrix in many more
   cases: notably commutatively for o in {*, ^, &} and also for {/, %%, %/%}.
 
+- h6 <- Hilbert(6); chol(h6) ; str(h6) # has 'factors'
+  str(H6 <- as(h6, "dspMatrix"))       # no longer lost 'factors'
+  ## and the same in a similar situation involving  "dpo", "dpp"
+
 
